Fixed header section's spacing

--- a/styles/06-components/trainers/trainers-header.scss
+++ b/styles/06-components/trainers/trainers-header.scss
@@ -8,9 +8,13 @@
   justify-content: center;
   align-items: center;
   min-height: 255px;
-  padding: 64px;
+  padding: 64px 0;
   background-color: $orange-600;
   text-align: center;
+
+  .trainers-header-inner-container {
+    max-width: 950px;
+  }
 
   .header-title {
     margin-top: 0;
